--- a/src/assets/scss/base/_custom-css.scss
+++ b/src/assets/scss/base/_custom-css.scss
@@ -426,3 +426,13 @@
     background-image: none;
   }
 }
+/*
+.spinn-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  width: 100%;
+  height: 100vh;
+  z-index: 9999;
+}*/
